# tiss-cli

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml  zensical.toml
.github/actions/setup/: action.yml
.github/workflows/: code_quality.yml  docs.yml  publish.yml  release.yml  test_coverage.yml  test_platform.yml
docs/: changelog.md  contributing.md  index.md  license.md
docs/reference/: api.md
src/tiss_cli/: __init__.py  _cli.py  _store.py  _utils.py
src/tiss_cli/cmd/: __init__.py  _add.py  _list.py  _remove.py  _sync.py
tests/: test_meta.py  test_store.py
