[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.28,<0.10" ]

[project]
name = "tiss-cli"
version = "0.0.1.dev1"
description = "The project description..."
readme = "README.md"
authors = [ { name = "Nikolas Pikall", email = "nikolas.pikall@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "defusedxml>=0.7.1",
  "httpx>=0.28.1",
  "platformdirs>=4.9.4",
  "pydantic>=2.12.5",
  "rich>=14.3.3",
]
scripts.tiss = "tiss_cli:main_cli"

[dependency-groups]
# Unlike optional dependencies, development dependencies are local-only
# and will not be included in the project requirements when
# published to PyPI or other indexes
dev = [ "pytest>=9.0.1", "pytest-cov>=7", "ruff>=0.14.14", "ty>=0.0.14" ]
docs = [ "mkdocstrings-python>=2.0.1", "zensical>=0.0.20" ]

[tool.ruff]
line-length = 88
indent-width = 4
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma (may conflict with ruff formatter)
  "D203",   # incorrect-blank-line-before-class (conflicts with D211)
  "D213",   # multi-line-summary-second-line (conflicts with D212)
  "T201",
]
lint.per-file-ignores."**/{tests}/*" = [ "ANN201", "D", "E402", "INP001", "S101" ]
lint.per-file-ignores."__init__.py" = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.unfixable = []

[tool.pytest]
ini_options.addopts = "--cov=tiss-cli --cov-report term-missing -rsx --verbose --color=yes"

[tool.coverage]
run.relative_files = true
