[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.9,<0.11" ]

[project]
name = "tiss-cli"
version = "0.0.1.dev1"
description = "The project description..."
readme = "README.md"
authors = [ { name = "Nikolas Pikall", email = "nikolas.pikall@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "defusedxml>=0.7.1",
  "httpx>=0.28.1",
  "platformdirs>=4.9.4",
  "pydantic>=2.12.5",
  "rich>=14.3.3",
]
scripts.tiss = "tiss_cli:main_cli"

[dependency-groups]
# Unlike optional dependencies, development dependencies are local-only
# and will not be included in the project requirements when
# published to PyPI or other indexes
dev = [ "pytest>=9.0.1", "pytest-cov>=7", "ruff>=0.14.14", "ty>=0.0.14" ]
docs = [ "mkdocstrings-python>=2.0.1", "zensical>=0.0.20" ]

[tool.ruff]
line-length = 88
indent-width = 4
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma (may conflict with ruff formatter)
  "D203",   # incorrect-blank-line-before-class (conflicts with D211)
  "D213",   # multi-line-summary-second-line (conflicts with D212)
  "T201",
]
lint.per-file-ignores."**/{tests}/*" = [ "ANN201", "D", "E402", "INP001", "S101" ]
lint.per-file-ignores."__init__.py" = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.unfixable = []

[tool.pytest]
ini_options.addopts = "--cov=tiss-cli --cov-report term-missing -rsx --verbose --color=yes"

[tool.coverage.run]
relative_files = true

[tool.pyproject-fmt]
table_format = "long"
collapse_tables = ["project.authors"]


[tool.git-cliff.changelog]
header = """
# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
body = """
{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}_({{ commit.scope }})_ {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | lower }}\
    {% endfor %}
{% endfor %}\n
"""
footer = """
{% for release in releases -%}
    {% if release.version -%}
        {% if release.previous.version -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
                    /compare/{{ release.previous.version }}..{{ release.version }}
        {% else -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
                    /tree/{{ release.version }}
        {% endif -%}
    {% else -%}
        [unreleased]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}\
            /compare/{{ release.previous.version }}..HEAD
    {% endif -%}
{% endfor %}
<!-- generated by git-cliff -->
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = false
commit_parsers = [
  { message = "^feat", group = "<!-- 0 -->🚀 Features" },
  { message = "^[a|A]dd", group = "<!-- 0 -->🚀 Features" },
  { message = "^[s|S]upport", group = "<!-- 0 -->🚀 Features" },
  { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
  { message = "^doc", group = "<!-- 2 -->📚 Documentation" },
  { message = "^perf", group = "<!-- 3 -->🚜 Refactor" },
  { message = "^refactor", group = "<!-- 3 -->🚜 Refactor" },
  { message = "^style", group = "<!-- 3 -->🚜 Refactor" },
  { message = "^test", group = "<!-- 4 -->🧪 Testing" },
  { message = "^chore\\(release\\): bump version to", skip = true },
  { message = "^chore\\(deps.*\\)", skip = true },
  { message = "^chore\\(pr\\)", skip = true },
  { message = "^chore\\(pull\\)", skip = true },
  { message = "^revert", group = "<!-- 5 -->◀️ Revert" },
  { message = "^[r|R]emove", group = "<!-- 5 -->◀️ Revert" },
  { message = "^.*: remove", group = "<!-- 5 -->◀️ Revert" },
  { message = "^.*: delete", group = "<!-- 5 -->◀️ Revert" },
  { message = "^chore|^ci", group = "<!-- 6 -->💼 Other" },
  { message = ".*", group = "<!-- 6 -->💼 Other" },
]
filter_commits = false
topo_order = false
sort_commits = "oldest"

